--- a/package.json
+++ b/package.json
@@ -2,10 +2,8 @@
   "name": "webpack-react",
   "version": "1.0.0",
   "description": "webpack-react",
-  "main": "webpack.config.js",
+  "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server",
-    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,35 +15,5 @@
   "bugs": {
     "url": "https://github.com/xklj/webpack-react/issues"
   },
-  "homepage": "https://github.com/xklj/webpack-react#readme",
-  "devDependencies": {
-    "@babel/core": "^7.10.2",
-    "@babel/polyfill": "^7.10.1",
-    "@babel/preset-env": "^7.10.2",
-    "@babel/preset-react": "^7.10.1",
-    "autoprefixer": "^9.8.0",
-    "babel-loader": "^8.1.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^3.6.0",
-    "cssnano": "^4.1.10",
-    "file-loader": "^6.0.0",
-    "glob-all": "^3.2.1",
-    "html-webpack-plugin": "^4.3.0",
-    "less": "^3.11.3",
-    "less-loader": "^6.1.1",
-    "mini-css-extract-plugin": "^0.9.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "postcss-loader": "^3.0.0",
-    "purify-css": "^1.2.5",
-    "purifycss-webpack": "^0.7.0",
-    "style-loader": "^1.2.1",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0"
-  },
-  "dependencies": {
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0"
-  }
+  "homepage": "https://github.com/xklj/webpack-react#readme"
 }
