--- a/package.json
+++ b/package.json
@@ -45,7 +45,10 @@
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
+    "antd": "^4.3.4",
+    "eslint": "^7.2.0",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0"
   }
 }
