--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --inline --config ./config/webpack.dev.config.js",
+    "devBuild": "webpack --config ./config/webpack.dev.config.js",
     "build": "webpack --config ./config/webpack.pro.config.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "test-eslint": "eslint src/**/*.js src/**/*.jsx"
@@ -31,7 +32,7 @@
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
     "less": "^3.11.3",
-    "less-loader": "^6.1.1",
+    "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
