--- a/.babelrc
+++ b/.babelrc
@@ -7,7 +7,7 @@
           // 大于相关浏览器版本无需用到 preset-env
           "edge": 17,
           "firefox": 60,
-          "chrome": 67,
+          "chrome": 67
           // "safari": 11.1
         },
         "corejs": 2, //新版本需要指定核⼼库版本
