--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,14 @@
 {
+  "plugins": [
+    [
+      "import",
+      {
+        "libraryName": "antd",
+        "libraryDirectory": "lib",  // libraryDirectory 默认为 lib
+        "style": "css"
+      }
+    ]
+  ],
   "presets": [
     [
       "@babel/preset-env",
