--- a/.babelrc
+++ b/.babelrc
@@ -5,7 +5,7 @@
       {
         "libraryName": "antd",
         "libraryDirectory": "lib",  // libraryDirectory 默认为 lib
-        "style": "css"
+        "style": true
       }
     ]
   ],
