updaet project config

--- a/.eslintrc
+++ b/.eslintrc
@@ -7,15 +7,10 @@
     }
   },
   "rules":{
-    "jsx-a11y/anchor-is-valid":"off"
+    "jsx-a11y/anchor-is-valid":"off",
+    "no-unused-vars": ["error", { "vars": "all", "args": "after-used", "ignoreRestSiblings": false }]
   },
   "extends": [
-    // "eslint:recommended",
     "plugin:react/recommended"
-  ],
-  "globals": { 
-    "localStorage": true,
-    "window" : true,
-    "document": true
-  }
+  ]
 }
