--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babel/preset-env": "^7.10.2",
     "@babel/preset-react": "^7.10.1",
     "autoprefixer": "^9.8.0",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-import": "^1.13.0",
     "clean-webpack-plugin": "^3.0.0",
@@ -48,6 +49,7 @@
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
+    "@rematch/core": "^1.4.0",
     "antd": "^4.3.4",
     "eslint": "^7.2.0",
     "history": "^4.10.1",
