update webpack.pro.config rules

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "webpack-react",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --inline --config ./config/webpack.dev.config.js",
-    "devBuild": "webpack --config ./config/webpack.dev.config.js",
+    "start": "webpack-dev-server --inline --config ./config/webpack.locale.config.js",
+    "build:locale": "webpack --config ./config/webpack.locale.config.js",
     "build": "webpack --config ./config/webpack.pro.config.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "test-eslint": "eslint src/**/*.js src/**/*.jsx"
@@ -41,7 +41,6 @@
     "postcss": "^7.0.32",
     "postcss-loader": "^3.0.0",
     "style-loader": "^1.2.1",
-    "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^4.1.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
@@ -57,6 +56,7 @@
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "terser-webpack-plugin": "^3.0.7"
   }
 }
